--- a/package.json
+++ b/package.json
@@ -7,18 +7,30 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@dsign/player-cli": "github:dsignn/player-cli",
-    "dexie": "^2.0.4"
+    "dexie": "^2.0.4",
+    "run-script-os": "^1.0.7"
   },
   "scripts": {
-    "postinstall": "cp app/config/config.json.dist app/config/config-development.json && cp app/config/config.json.dist app/config/config-production.json && cp app/config/module.json.dist app/config/module.json && cd app && npm install",
-    "start": "cd app && export APP_ENVIRONMENT=development && export ELECTRON_DISABLE_SECURITY_WARNINGS=true && ./node_modules/.bin/electron ./main.js --inspect=5858",
-    "start-win": "cd app && set APP_ENVIRONMENT=development &&  .\\node_modules\\.bin/electron .\\main.js --inspect=5858",
+    "postinstall": "npm run postinstallscriptos",
+    "postinstallscriptos": "run-script-os",
+    "postinstallscriptos:linux:darwin": "cp app/config/config.json.dist app/config/config-development.json && cp app/config/config.json.dist app/config/config-production.json && cp app/config/module.json.dist app/config/module.json && cd app && npm install",
+    "postinstallscriptos:win32": "copy app\\config\\config.json.dist app\\config\\config-development.json && copy app\\config\\config.json.dist app\\config\\config-production.json && copy app\\config\\module.json.dist app\\config\\module.json && cd app && npm install",
+    "start": "run-script-os",
+    "start:linux:darwin": "cd app && export APP_ENVIRONMENT=development && export ELECTRON_DISABLE_SECURITY_WARNINGS=true && ./node_modules/.bin/electron ./main.js --inspect=5858",
+    "start:win32": "cd app && set APP_ENVIRONMENT=development&& set ELECTRON_DISABLE_SECURITY_WARNINGS=true && electron .\\node_modules\\.bin\\main.js --inspect=5858",
     "polymer-build": "cd app && ./node_modules/.bin/polymer build",
-    "postpolymer-build": "rsync -avh app/build/ build/ --delete && rsync -avh --ignore-existing app/node_modules/ build/es6bundle/node_modules/ --delete && rm -rf app/build && cp app/style/icon/logo.png build/es6bundle/icon.png",
-    "start-pre-build": "cd app && ./node_modules/.bin/electron ./../build/es6bundle/main.js --inspect=5858",
+    "postpolymer-build": "postpolymer-buildscriptos",
+    "postpolymer-buildscriptos": "run-script-os",
+    "postpolymer-buildscriptos:linux:darwin": "rsync -avh app/build/ build/ --delete && rsync -avh --ignore-existing app/node_modules/ build/es6bundle/node_modules/ --delete && rm -rf app/build && cp app/style/icon/logo.png build/es6bundle/icon.png",
+    "postpolymer-buildscriptos:win32": "rsync -avh app\\build\\ build\\ --delete && rsync -avh --ignore-existing app\\node_modules\\ build\\es6bundle\\node_modules\\ --delete && rmdir /Q /S app\\build && copy app\\style\\icon\\logo.png build\\es6bundle\\icon.png",
+    "start-pre-build": "run-script-os",
+    "start-pre-build:linux:darwin": "cd app && ./node_modules/.bin/electron ./../build/es6bundle/main.js --inspect=5858",
+    "start-pre-build:win32": "cd app && .\\node_modules\\.bin\\electron .\\..\\build\\es6bundle\\main.js --inspect=5858",
     "test": "cd app && ./node_modules/.bin/polymer test -l chrome",
     "dist": "cd app && ./node_modules/.bin/electron-builder --project ../build/es6bundle -c.extraMetadata.main=main.js -wl --x64",
-    "clear-all": "rm -rf app/node_modules && rm -rf build && rm -rf releases"
+    "clear-all": "run-script-os",
+    "clear-all:linux:darwin": "rm -rf app/node_modules && rm -rf build && rm -rf releases",
+    "clear-all:win32": "rmdir /Q /S  app\\node_modules && rmdir /Q /S build && rmdir /Q /S releases"
   },
   "keywords": [
     "polymer 3",
