--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,12 @@
   "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.6.3",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1",
+    "@babel/runtime": "^7.10.2",
     "@types/source-map": "^0.5.7",
     "acl": "^0.4.11",
     "babel-polyfill": "^6.26.0",
@@ -19,12 +19,13 @@
     "electron": "5.0.6",
     "electron-builder": "~20.39.0",
     "polymer-cli": "^1.9.9",
-    "typescript": "^3.6.4"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "@dsign/library": "github:dsignn/library#master",
+    "@dsign/polymer-mixin": "github:dsignn/polymer-mixin#master",
     "@fluidnext-polymer/paper-autocomplete": "^3.0.2",
-    "@fluidnext-polymer/paper-chip": "fluidnext/paper-chip#develop",
+    "@fluidnext-polymer/paper-chip": "github:fluidnext/paper-chip#develop",
     "@fluidnext-polymer/paper-grid": "github:fluidnext/paper-grid",
     "@fluidnext-polymer/paper-input-color": "^3.1.0",
     "@fluidnext-polymer/paper-input-file": "^3.0.0",
@@ -41,17 +42,17 @@
     "@polymer/paper-checkbox": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-scrollable": "^3.0.1",
-    "@polymer/paper-dropdown-menu": "^3.0.1",
+    "@polymer/paper-dropdown-menu": "^3.1.0",
     "@polymer/paper-fab": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
-    "@polymer/paper-input": "^3.0.2",
+    "@polymer/paper-input": "^3.2.1",
     "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-listbox": "^3.0.1",
     "@polymer/paper-menu-button": "^3.0.1",
     "@polymer/paper-progress": "^3.0.1",
     "@polymer/paper-radio-button": "^3.0.1",
     "@polymer/paper-radio-group": "^3.0.1",
-    "@polymer/paper-ripple": "^3.0.1",
+    "@polymer/paper-ripple": "^3.0.2",
     "@polymer/paper-slider": "^3.0.1",
     "@polymer/paper-spinner": "^3.0.2",
     "@polymer/paper-swatch-picker": "^3.0.1",
@@ -59,18 +60,18 @@
     "@polymer/paper-toast": "^3.0.1",
     "@polymer/paper-toggle-button": "^3.0.1",
     "@polymer/paper-tooltip": "^3.0.1",
-    "@polymer/polymer": "^3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "adm-zip": "^0.4.13",
+    "@polymer/polymer": "^3.4.1",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "adm-zip": "^0.4.14",
     "app-module-path": "^2.2.0",
     "archiver": "^3.0.0",
-    "decompress": "^4.2.0",
+    "decompress": "^4.2.1",
     "dexie": "^2.0.4",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^8.0.1",
     "js-acl": "^1.0.0",
-    "mongodb": "^3.3.3",
+    "mongodb": "^3.5.9",
     "paper-collapse-item": "^4.0.5",
     "web-animations-js": "^2.3.1"
   },
