Fix dashboard and admin

--- a/app/config/config.json.dist
+++ b/app/config/config.json.dist
@@ -1,4 +1,8 @@
 {
+  app: {
+    basePath: 'http://127.0.0.1:8081/',
+    moduleRelativePath: 'src/module'
+  },
   "localize": {
     "defaultLanguage": "it",
     "languages": [
