Fix timeslot module

--- a/app/module/timeslot/package.json
+++ b/app/module/timeslot/package.json
@@ -32,24 +32,32 @@
         {
             "src": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags.js",
             "srcData": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags-data.js",
-            "description": "Widget to view tagged timeslot",
             "name": "Timeslot tags",
-            "wc": "paper-timeslot-tags",
-            "wcData": "paper-timeslot-tags-data",
-            "dataProperty": "tags",
-            "dataLabel": "tags",
-            "dataRequired": true
+            "description": "Widget to view tagged timeslot",
+            "webComponent": {
+                "name": "paper-timeslot-tags"
+            },
+            "webComponentData": {
+                "name": "paper-timeslot-tags-data"
+            },
+            "property": "tags",
+            "label": "tags",
+            "require": "true"
         },
         {
             "src": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors.js",
             "srcData": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors-data.js",
-            "description": "Widget to view the timeslots assiate to the montors",
             "name": "Timeslot monitors",
-            "wc": "paper-timeslot-monitors",
-            "wcData": "paper-timeslot-monitors-data",
-            "dataProperty": "monitors",
-            "dataLabel": "monitors",
-            "dataRequired": true
+            "description": "Widget to view the timeslots assiate to the montors",
+            "webComponent": {
+                "name": "paper-timeslot-monitors"
+            },
+            "webComponentData": {
+                "name": "paper-timeslot-monitors-data"
+            },
+            "property": "monitors",
+            "label": "monitors",
+            "require": true
         }
     ]
 }
