--- a/app/module/timeslot/package.json
+++ b/app/module/timeslot/package.json
@@ -2,62 +2,145 @@
     "title": "Timeslot",
     "name": "timeslot",
     "icon": "timeslot:menu",
-    "configEntryPoint": "config.js",
+    "configEntryPoint": "repository.js",
     "entryPoint": {
         "name": "timeslot-index",
-        "path": "index.js"
+        "path": {
+            "directory": "element/timeslot-index",
+            "nameFile": "timeslot-index",
+            "extension": "js"
+        }
     },
     "autoloads": [
-        "src/injector/AbstractInjector.js",
-        "src/AbstractTimeslotService.js",
-        "src/TimeslotService.js",
-        "src/storage/entity/TimeslotEntity.js",
-        "src/storage/entity/embedded/Injector.js",
-        "src/storage/adapter/dexie/DexieTimeslotAdapter.js",
-        "src/storage/adapter/mongo/MongoTimeslotAdapter.js",
-        "src/injector/Test1.js",
-        "src/injector/Test2.js"
+        {
+            "name": "AbstractTimeslotService",
+            "path": {
+                "directory": "src",
+                "nameFile": "AbstractTimeslotService",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "TimeslotService",
+            "path": {
+                "directory": "src",
+                "nameFile": "TimeslotService",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "TimeslotEntity",
+            "path": {
+                "directory": "src/entity",
+                "nameFile": "TimeslotEntity",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "Injector",
+            "path": {
+                "directory": "src/entity/embedded",
+                "nameFile": "Injector",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "MongoTimeslotAdapter",
+            "path": {
+                "directory": "src/storage/adapter/mongo",
+                "nameFile": "MongoTimeslotAdapter",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "DexieTimeslotAdapter",
+            "path": {
+                "directory": "src/storage/adapter/dexie",
+                "nameFile": "DexieTimeslotAdapter",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "Test1",
+            "path": {
+                "directory": "src/injector",
+                "nameFile": "Test1",
+                "extension": "js"
+            }
+        },
+        {
+            "name": "Test2",
+            "path": {
+                "directory": "src/injector",
+                "nameFile": "Test2",
+                "extension": "js"
+            }
+        }
     ],
     "autoloadsWs": [
         {
             "name": "timeslot-icons",
-            "path": "element/icons/icons.js"
+            "path": {
+                "directory": "element/timeslot-icons",
+                "nameFile": "timeslot-icons",
+                "extension": "js"
+            }
         },
         {
             "name": "timeslot-style",
-            "path": "element/style/style.js"
+            "path": {
+                "directory": "element/timeslot-style",
+                "nameFile": "timeslot-style",
+                "extension": "js"
+            }
         }
     ],
     "widgets": [
         {
-            "src": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags.js",
-            "srcData": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags-data.js",
             "name": "Timeslot tags",
             "description": "Widget to view tagged timeslot",
-            "webComponent": {
-                "name": "paper-timeslot-tags"
-            },
-            "webComponentData": {
-                "name": "paper-timeslot-tags-data"
-            },
             "property": "tags",
             "label": "tags",
-            "require": "true"
-        },
-        {
-            "src": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors.js",
-            "srcData": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors-data.js",
-            "name": "Timeslot monitors",
-            "description": "Widget to view the timeslots assiate to the montors",
+            "require": true,
             "webComponent": {
-                "name": "paper-timeslot-monitors"
+                "name": "paper-timeslot-tags",
+                "path": {
+                    "directory": "timeslot/element/widget/paper-timeslot-tags",
+                    "nameFile": "paper-timeslot-tags",
+                    "extension": "js"
+                }
             },
             "webComponentData": {
-                "name": "paper-timeslot-monitors-data"
-            },
+                "name": "paper-timeslot-tags-data",
+                "path": {
+                    "directory": "timeslot/element/widget/paper-timeslot-tags-data",
+                    "nameFile": "paper-timeslot-tags-data",
+                    "extension": "js"
+                }
+            }
+        },
+        {
+            "name": "Timeslot monitors",
+            "description": "Widget to view the timeslots assiate to the montors",
             "property": "monitors",
             "label": "monitors",
-            "require": true
+            "require": true,
+            "webComponent": {
+                "name": "paper-timeslot-monitors",
+                "path": {
+                    "directory": "timeslot/element/widget/paper-timeslot-monitors",
+                    "nameFile": "paper-timeslot-monitors",
+                    "extension": "js"
+                }
+            },
+            "webComponentData": {
+                "name": "paper-timeslot-monitors-data",
+                "path": {
+                    "directory": "timeslot/element/widget/paper-timeslot-monitors-data",
+                    "nameFile": "paper-timeslot-monitors-data",
+                    "extension": "js"
+                }
+            }
         }
     ]
 }
