--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,8 @@
     "acl": "^0.4.11",
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
-    "electron": "5.0.6",
-    "electron-builder": "~20.39.0",
+    "electron": "^9.0.5",
+    "electron-builder": "^22.7.0",
     "polymer-cli": "^1.9.9",
     "typescript": "^3.9.5"
   },
