--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,7 @@
     "acl": "^0.4.11",
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
-    "electron": "^11.4.2",
+    "electron": "13.0.0-beta.14",
     "electron-builder": "^22.10.5",
     "polymer-cli": "^1.9.9",
     "typescript": "^3.9.9"
