--- a/app/config/module.json.dist
+++ b/app/config/module.json.dist
@@ -352,26 +352,50 @@
         ],
         "widgets": [
             {
-                "src": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags.js",
-                "srcData": "timeslot/element/widget/paper-timeslot-tags/paper-timeslot-tags-data.js",
-                "description": "Widget to view tagged timeslot",
                 "name": "Timeslot tags",
-                "wc": "paper-timeslot-tags",
-                "wcData": "paper-timeslot-tags-data",
-                "dataProperty": "tags",
-                "dataLabel": "tags",
-                "dataRequired": true
+                "description": "Widget to view tagged timeslot",
+                "property": "tags",
+                "label": "tags",
+                "require": true,
+                 "webComponent" : {
+                       "name": "paper-timeslot-tags",
+                       "path": {
+                           "directory": "timeslot/element/widget/paper-timeslot-tags",
+                           "nameFile": "paper-timeslot-tags",
+                           "extension": "js"
+                       }
+                 },
+                 "webComponentData" : {
+                     "name": "paper-timeslot-tags-data",
+                     "path": {
+                         "directory": "timeslot/element/widget/paper-timeslot-tags-data",
+                         "nameFile": "paper-timeslot-tags-data",
+                         "extension": "js"
+                     }
+                 }
             },
             {
-                "src": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors.js",
-                "srcData": "timeslot/element/widget/paper-timeslot-monitors/paper-timeslot-monitors-data.js",
-                "description": "Widget to view the timeslots assiate to the montors",
                 "name": "Timeslot monitors",
-                "wc": "paper-timeslot-monitors",
-                "wcData": "paper-timeslot-monitors-data",
-                "dataProperty": "monitors",
-                "dataLabel": "monitors",
-                "dataRequired": true
+                "description": "Widget to view the timeslots assiate to the montors",
+                "property": "monitors",
+                "label": "monitors",
+                "require": true,
+                "webComponent" : {
+                     "name": "paper-timeslot-tags",
+                     "path": {
+                          "directory": "timeslot/element/widget/paper-timeslot-monitors",
+                          "nameFile": "paper-timeslot-monitors",
+                          "extension": "js"
+                     }
+                },
+                "webComponentData" : {
+                     "name": "paper-timeslot-tags-data",
+                     "path": {
+                         "directory": "timeslot/element/widget/paper-timeslot-monitors-data",
+                         "nameFile": "paper-timeslot-monitors-data",
+                         "extension": "js"
+                     }
+                }
             }
         ]
     },
