--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start-pre-build:linux:darwin": "cd app && ./node_modules/.bin/electron ./../build/es6bundle/main.js --inspect=5858",
     "start-pre-build:win32": "cd app && .\\node_modules\\.bin\\electron .\\..\\build\\es6bundle\\main.js --inspect=5858",
     "test": "cd app && ./node_modules/.bin/polymer test -l chrome",
-    "dist": "electron-builder -c.extraMetadata.main=main.js -lw -p onTag",
+    "dist": "electron-builder -c.extraMetadata.main=main.js -lw -p always",
     "clear-all": "run-script-os",
     "clear-all:linux:darwin": "rm -rf app/node_modules && rm -rf build && rm -rf releases",
     "clear-all:win32": "rmdir /Q /S  app\\node_modules && rmdir /Q /S build && rmdir /Q /S releases"
@@ -40,11 +40,11 @@
     "publish": {
       "provider": "github",
       "releaseType": "release",
-      "vPrefixedTagName": false
+      "vPrefixedTagName": false,
+      "token": "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"
     },
     "directories": {
       "output": "releases",
-
       "app": "build/es6bundle"
     },
     "win": {
