Fix hockey module

--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Resource",
-    "name": "resource",
+    "title": "Ice hockey",
+    "name": "ic",
     "icon": "resource:menu",
     "configEntryPoint": "repository.js",
     "entryPoint": {
