--- a/app/module/timer/package.json
+++ b/app/module/timer/package.json
@@ -1,6 +1,7 @@
 {
     "title": "Timer",
     "name": "timer",
+    "core": false,
     "icon": "timer:menu",
     "configEntryPoint": "repository.js",
     "entryPoint": {
