--- a/app/module/dashboard/package.json
+++ b/app/module/dashboard/package.json
@@ -1,6 +1,7 @@
 {
     "title": "Dashboard",
     "name": "dashboard",
+    "core": true,
     "icon": "dashboard:menu",
     "entryPoint": {
         "name": "dashboard-index",
