--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -1,6 +1,7 @@
 {
-    "title": "Ice hockey",
-    "name": "ic",
+    "title": "Resource",
+    "name": "resource",
+    "core": true,
     "icon": "resource:menu",
     "configEntryPoint": "repository.js",
     "entryPoint": {
