--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -78,6 +78,14 @@
                 "nameFile": "resource-icons",
                 "extension": "js"
             }
+        },
+        {
+            "name": "paper-icon-resource-upsert",
+            "path": {
+                "directory": "element/paper-icon-resource-upsert",
+                "nameFile": "paper-icon-resource-upsert",
+                "extension": "js"
+            }
         }
     ]
 }
