--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
+    "@babel/core": "^7.18.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "devtron": "^1.4.0",
     "electron": "19.0.6",
+    "extract-zip": "2.0.1",
     "polymer-cli": "^1.9.9",
     "typescript": "^3.9.10"
   },
@@ -61,16 +62,11 @@
     "@polymer/paper-tooltip": "^3.0.1",
     "@polymer/polymer": "^3.5.1",
     "@webcomponents/webcomponentsjs": "^2.6.0",
-    "adm-zip": "^0.4.14",
     "app-module-path": "^2.2.0",
-    "archiver": "^3.0.0",
-    "decompress": "^4.2.1",
     "dexie": "^2.0.4",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^8.0.1",
     "js-acl": "^1.0.0",
-    "mongodb": "^3.7.3",
     "paper-collapse-item": "^4.0.5",
     "web-animations-js": "^2.3.1"
   },
