Fix load module

--- a/app/package.json
+++ b/app/package.json
@@ -63,7 +63,7 @@
     "@polymer/polymer": "^3.5.1",
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "app-module-path": "^2.2.0",
-    "dexie": "^2.0.4",
+    "dexie": "~3.2.2",
     "easytimer.js": "git+ssh://git@github.com/albert-gonzalez/easytimer.js.git#v3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "js-acl": "^1.0.0",
