--- a/app/config/config.json.dist
+++ b/app/config/config.json.dist
@@ -33,7 +33,8 @@
         "port": 27017
       },
       "dexie": {
-        "nameDb": "dsign"
+        "nameDb": "dsign",
+        "version": 1
       },
       "localStorage": {
         "namespace": "dsign"
