Fix media device

--- a/ext-module/media-device/package.json
+++ b/ext-module/media-device/package.json
@@ -13,7 +13,7 @@
     },
     "autoloadsWc": [
         {
-            "name": "monitor-icons",
+            "name": "media-device-icons",
             "path": {
                 "directory": "element/media-device-icons",
                 "nameFile": "media-device-icons",
