Fix video panel

--- a/ext-module/playlist/package.json
+++ b/ext-module/playlist/package.json
@@ -63,5 +63,8 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "scripts": {
+        "zip": "zip -r  ../playlist . "
+    }
 }
