--- a/ext-module/video-panel/package.json
+++ b/ext-module/video-panel/package.json
@@ -134,5 +134,8 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "scripts": {
+        "zip": "zip -r  ../video-panel . -x video-generator/\\*"
+    }
 }
