--- a/ext-module/hello-word/package.json
+++ b/ext-module/hello-word/package.json
@@ -30,5 +30,9 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+
+    "scripts": {
+        "zip": "zip -r  ../hello-word . "
+    }
 }
