--- a/ext-module/ice-hockey/package.json
+++ b/ext-module/ice-hockey/package.json
@@ -24,5 +24,9 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+
+    "scripts": {
+        "zip": "zip -r  ../ice-hockey . "
+    }
 }
