--- a/ext-module/media-device/package.json
+++ b/ext-module/media-device/package.json
@@ -46,5 +46,8 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "scripts": {
+        "zip": "zip -r  ../media-device . "
+    }
 }
